[gd_scene load_steps=4 format=3 uid="uid://c3xtfo24bxr5w"]

[ext_resource type="Script" path="res://src/framework/game_main.gd" id="1_teeij"]
[ext_resource type="Script" path="res://src/scenes/configs_detail.gd" id="1_xpqg3"]

[sub_resource type="LabelSettings" id="LabelSettings_n5ijf"]
font_size = 22
shadow_color = Color(0, 0, 0, 0.862745)

[node name="ConfigsDetail" type="Node"]

[node name="GameMain" type="Node" parent="."]
script = ExtResource("1_teeij")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xpqg3")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="LabelInfo1" type="Label" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "text"
label_settings = SubResource("LabelSettings_n5ijf")

[node name="LabelInfo2" type="Label" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "text"
label_settings = SubResource("LabelSettings_n5ijf")
